--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
   </head>
   <body>
     <header>
-      <div class="language-selector">
+      <div class="language-selector1">
+        <label for="">langage1</label>
+
+        <select id="lang" name="lang" onchange="changeLanguage(this.value)">
+          <option value="fr">FR</option>
+          <option value="en">EN</option>
+          <option value="es">ES</option>
+        </select>
+      </div>
+      <div class="language-selector1">
+        <label for="">langage2</label>
         <select id="lang" name="lang" onchange="changeLanguage(this.value)">
           <option value="fr">FR</option>
           <option value="en">EN</option>
@@ -16,6 +26,6 @@
         </select>
       </div>
     </header>
-    <h1>test</h1>
+    <h1 class="title">test</h1>
   </body>
 </html>
