--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
           <option value="es">ES</option>
         </select>
       </div>
+      <div class="language-selector3">
+        <label for="">langage3</label>
+        <select id="lang" name="lang" onchange="changeLanguage(this.value)">
+          <option value="fr">FR</option>
+          <option value="en">EN</option>
+          <option value="es">ES</option>
+        </select>
+      </div>
     </header>
     <h1 class="title">test</h1>
   </body>
