--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css?a=3" />
+    <link rel="stylesheet" href="./style.css?a=4" />
     <title>Ma Page Personnelle</title>
   </head>
   <body>
     <header>
-      <div class="language-selector1">
-        <label for="">langage1</label>
+      <div class="header-select">
+        <div class="language-selector1">
+          <label for="">langage1</label>
 
-        <select id="lang" name="lang" onchange="changeLanguage(this.value)">
-          <option value="fr">FR</option>
-          <option value="en">EN</option>
-          <option value="es">ES</option>
-        </select>
+          <select id="lang" name="lang" onchange="changeLanguage(this.value)">
+            <option value="fr">FR</option>
+            <option value="en">EN</option>
+            <option value="es">ES</option>
+          </select>
+        </div>
       </div>
       <div class="language-selector2">
         <label for="">langage2</label>
