--- a/index.html
+++ b/index.html
@@ -19,20 +19,8 @@
           >
             <option id="igcrurg" label="" value="" class="">fr</option>
 
-            <option id="ile52nw" label="" value="/en/" class="">
-              en
-            </option></select
-          ><label
-            for="toggle"
-            class="hamburger"
-            aria-label="open nav"
-            aria-expanded="false"
-            tabindex="0"
-          >
-            <div class="top-bun"></div>
-            <div class="meat"></div>
-            <div class="bottom-bun"></div>
-          </label>
+            <option id="ile52nw" label="" value="/en/" class="">en</option>
+          </select>
         </div>
       </div>
     </header>
