--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             onchange="location.href=this.options[this.selectedIndex].value"
             aria-label="languages"
           >
-            <option id="igcrurg" label="" value="" class="">fr</option>
+            <option id="igcrurg" value="" class="">fr</option>
 
-            <option id="ile52nw" label="" value="/en/" class="">en</option>
+            <option id="ile52nw" value="/en/" class="">en</option>
           </select>
         </div>
       </div>
