--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <header
@@ -54,5 +55,6 @@
         </select>
       </div>
     </header> -->
+    <h1 class="title">test</h1>
   </body>
 </html>
